--- a/src/components/styles/Red.module.css
+++ b/src/components/styles/Red.module.css
@@ -35,10 +35,9 @@ li.links a {
 
 .wrapper {
   display: grid;
-  height: 99%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
+  height: 100%;
+  width: auto;
+  margin: 0 auto;
 }
 
 .gridContainer {
@@ -65,7 +64,7 @@ li.links a {
     /* item 3 min-width creates a buffer section for peeking bear to appear without affecting grid's format */
     /* removing min-width or setting to an insufficient value forces grid item 2's content to shift during animation */
     .item3 { grid-area: left; min-width: 2.5rem; }
-    .item4 { grid-area: footer; }
+    .item4 { grid-area: footer; margin-bottom: 1rem; }
 
 .bearLogo {
   opacity: 0.9;
@@ -90,8 +89,6 @@ li.links a {
 
   .contentContainer {
     display: grid;
-    height: 70%;
-    width: auto;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: minmax(2rem, auto);
     grid-gap: 2rem;
@@ -342,6 +339,6 @@ li.links a {
     transform:translate(-0.75rem, -3rem);
     -webkit-transform: translate(-0.75rem, -3rem);
     -moz-transform:translate(-0.75rem, -3rem);
-    -o-transform:translate(-0.75rem, -3 rem);
+    -o-transform:translate(-0.75rem, -3rem);
   }
 }
